# chess-bot

./: app.py  pyproject.toml
chess-bot/: game.py
chess-bot/solver/: __init__.py
notebooks/: first_steps.ipynb
scripts/: index.js
templates/: index.html
