[tool.poetry]
name = "chess-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chess_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
chess = "^1.9.4"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
